--- a/Lessons/09-rock-paper-scissors.html
+++ b/Lessons/09-rock-paper-scissors.html
@@ -4,51 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="/styles/10-rock-paper-scissors.css" />
   </head>
-  <style>
-    body {
-      background-color: rgb(25, 25, 25);
-      color: white;
-      font-family: arial;
-      margin-left: 30px;
-    }
-    .title {
-      font-size: 30px;
-      font-weight: bold;
-    }
 
-    .move-icon {
-      height: 50px;
-    }
-
-    .move-button {
-      background-color: transparent;
-      border: 3px solid white;
-      width: 120px;
-      height: 120px;
-      border-radius: 60px;
-      margin-right: 10px;
-      cursor: pointer;
-    }
-
-    .result {
-      font-size: 25px;
-      font-weight: bold;
-      margin-top: 50px;
-    }
-
-    .score {
-      margin-top: 60px;
-    }
-
-    .reset-score-button {
-      background-color: white;
-      border: none;
-      font-size: 15px;
-      padding: 8px 15px;
-      cursor: pointer;
-    }
-  </style>
   <body>
     <p class="title">Rock Paper Scissors</p>
     <button
@@ -98,92 +56,6 @@
       Reset Score
     </button>
 
-    <script>
-      let score = JSON.parse(localStorage.getItem("score")) || {
-        wins: 0,
-        losses: 0,
-        ties: 0,
-      };
-
-      updateScoreElement();
-      // if (!score) {
-      //   score = {
-      //     wins: 0,
-      //     losses: 0,
-      //     ties: 0,
-      //   };
-      // }
-
-      function playGame(playerMove) {
-        const computerMove = pickComputerMove();
-
-        let result = "";
-
-        if (playerMove === "scissors") {
-          if (computerMove === "rock") {
-            result = "You lose.";
-          } else if (computerMove === "paper") {
-            result = "You win.";
-          } else if (computerMove === "scissors") {
-            result = "Tie.";
-          }
-        } else if (playerMove === "paper") {
-          if (computerMove === "rock") {
-            result = "You win.";
-          } else if (computerMove === "paper") {
-            result = "Tie.";
-          } else if (computerMove === "scissors") {
-            result = "You lose.";
-          }
-        } else if (playerMove === "rock") {
-          if (computerMove === "rock") {
-            result = "Tie.";
-          } else if (computerMove === "paper") {
-            result = "You lose.";
-          } else if (computerMove === "scissors") {
-            result = "You win.";
-          }
-        }
-
-        if (result === "You win.") {
-          score.wins += 1;
-        } else if (result === "You lose.") {
-          score.losses += 1;
-        } else if (result === "Tie.") {
-          score.ties += 1;
-        }
-
-        localStorage.setItem("score", JSON.stringify(score));
-
-        document.querySelector(".js-result").innerHTML = result;
-
-        document.querySelector(
-          ".js-moves"
-        ).innerHTML = `You <img src="/assets/${playerMove}-Emoji.png" class="move-icon" />
-      <img src="/assets/${computerMove}-Emoji.png" class="move-icon" /> Computer`;
-      }
-
-      function updateScoreElement() {
-        document.querySelector(
-          ".js-score"
-        ).innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-      }
-
-      function pickComputerMove() {
-        const randomNumber = Math.random();
-
-        let computerMove = "";
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-          computerMove = "rock";
-        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-          computerMove = "paper";
-        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-          computerMove = "scissors";
-        }
-
-        return computerMove;
-      }
-    </script>
+    <script src="/scripts/10-rock-paper-scissors.js"></script>
   </body>
 </html>
