--- a/Exercises/10-calculator.html
+++ b/Exercises/10-calculator.html
@@ -5,143 +5,144 @@
   </head>
   <body>
     <!-- Create an element to display the calculation. -->
-    <p class="js-calculation"></p>
+    <div class="calculator">
+      <p class="js-calculation"></p>
 
-    <p>
-      <button
-        onclick="
+      <p>
+        <button
+          onclick="
         updateCalculation('1');
       "
-        class="number"
-      >
-        1
-      </button>
+          class="number"
+        >
+          1
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('2');
       "
-        class="number"
-      >
-        2
-      </button>
+          class="number"
+        >
+          2
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('3');
       "
-        class="number"
-      >
-        3
-      </button>
+          class="number"
+        >
+          3
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation(' + ');
       "
-        class="orange-sign"
-      >
-        +
-      </button>
-    </p>
+          class="orange-sign"
+        >
+          +
+        </button>
+      </p>
 
-    <p>
-      <button
-        onclick="
+      <p>
+        <button
+          onclick="
         updateCalculation('4');
       "
-        class="number"
-      >
-        4
-      </button>
+          class="number"
+        >
+          4
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('5');
       "
-        class="number"
-      >
-        5
-      </button>
+          class="number"
+        >
+          5
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('6');
       "
-        class="number"
-      >
-        6
-      </button>
+          class="number"
+        >
+          6
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation(' - ');
       "
-        class="orange-sign"
-      >
-        -
-      </button>
-    </p>
+          class="orange-sign"
+        >
+          -
+        </button>
+      </p>
 
-    <p>
-      <button
-        onclick="
+      <p>
+        <button
+          onclick="
         updateCalculation('7');
       "
-        class="number"
-      >
-        7
-      </button>
+          class="number"
+        >
+          7
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('8');
       "
-        class="number"
-      >
-        8
-      </button>
+          class="number"
+        >
+          8
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('9');
       "
-        class="number"
-      >
-        9
-      </button>
+          class="number"
+        >
+          9
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation(' * ');
       "
-        class="orange-sign"
-      >
-        *
-      </button>
-    </p>
+          class="orange-sign"
+        >
+          *
+        </button>
+      </p>
 
-    <p>
-      <button
-        onclick="
+      <p>
+        <button
+          onclick="
         updateCalculation('0');
       "
-        class="number"
-      >
-        0
-      </button>
+          class="number"
+        >
+          0
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation('.');
       "
-        class="number"
-      >
-        .
-      </button>
+          class="number"
+        >
+          .
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         // Note: eval() takes a string and runs it as code.
         // Avoid using eval() in real world projects since
         // it can potentially be given harmful code to run.
@@ -154,24 +155,24 @@
 
         localStorage.setItem('calculation', calculation);
       "
-        class="number"
-      >
-        =
-      </button>
+          class="number"
+        >
+          =
+        </button>
 
-      <button
-        onclick="
+        <button
+          onclick="
         updateCalculation(' / ');
       "
-        class="orange-sign"
-      >
-        /
-      </button>
-    </p>
+          class="orange-sign"
+        >
+          /
+        </button>
+      </p>
 
-    <p>
-      <button
-        onclick="
+      <p>
+        <button
+          onclick="
         calculation = '';
 
         // Display the calculation on the page
@@ -180,11 +181,12 @@
 
         localStorage.setItem('calculation', calculation);
       "
-        class="grey-sign"
-      >
-        AC
-      </button>
-    </p>
+          class="grey-sign"
+        >
+          AC
+        </button>
+      </p>
+    </div>
 
     <script>
       let calculation = localStorage.getItem("calculation") || "";
