switching eval for a new function

--- a/Exercises/10-calculator.html
+++ b/Exercises/10-calculator.html
@@ -141,24 +141,7 @@
           .
         </button>
 
-        <button
-          onclick="
-        // Note: eval() takes a string and runs it as code.
-        // Avoid using eval() in real world projects since
-        // it can potentially be given harmful code to run.
-        // Only use eval() for learning purposes.
-        calculation = eval(calculation);
-
-        // Display the calculation on the page
-        // instead of console.log
-        displayCalculation();
-
-        localStorage.setItem('calculation', calculation);
-      "
-          class="number"
-        >
-          =
-        </button>
+        <button onclick="calculate()" class="number">=</button>
 
         <button
           onclick="
@@ -202,6 +185,17 @@
         displayCalculation();
 
         localStorage.setItem("calculation", calculation);
+      }
+
+      function calculate() {
+        try {
+          const expression = new Function("return " + calculation)();
+          calculation = expression;
+        } catch (error) {
+          calculation = "Error: Invalid expression";
+        }
+        localStorage.setItem("calculation", calculation);
+        displayCalculation();
       }
 
       function displayCalculation() {
