--- a/Lessons/11-arrays-and-loops.html
+++ b/Lessons/11-arrays-and-loops.html
@@ -54,22 +54,67 @@
       //   console.log(value);
       // }
 
-      const nums = [1, 1, 3];
-      let total = 0;
+      // const nums = [1, 1, 3];
+      // let total = 0;
 
-      for (let i = 0; i < nums.length; i++) {
-        const num = nums[i];
-        total += num;
+      // for (let i = 0; i < nums.length; i++) {
+      //   const num = nums[i];
+      //   total += num;
+      // }
+      // console.log(total);
+
+      // const numsDoubled = [];
+
+      // for (let i = 0; i < nums.length; i++) {
+      //   const num = nums[i];
+      //   numsDoubled.push(num * 2);
+      // }
+      // console.log(numsDoubled);
+
+      // const array1 = [1, 2, 3];
+      // const array2 = array1;
+      // array2.push(4);
+      // console.log(array1);
+      // console.log(array2);
+
+      // const [firstValue, secondValue, thirdValue] = [1, 2, 3];
+      // console.log(firstValue);
+
+      // for (let i = 1; i <= 10; i++) {
+      //   if (i % 3 === 0) {
+      //     continue;
+      //   }
+      //   console.log(i);
+      //   if (i === 8) {
+      //     break;
+      //   }
+      // }
+
+      // let i = 1;
+
+      // while (i <= 10) {
+      //   if (i % 3 === 0) {
+      //     i++;
+      //     continue;
+      //   }
+      //   console.log(i);
+      //   i++;
+      // }
+
+      function doubleArray(nums) {
+        const numsDoubled = [];
+
+        for (let i = 0; i < nums.length; i++) {
+          const num = nums[i];
+          if (num === 0) {
+            return numsDoubled;
+          }
+          numsDoubled.push(num * 2);
+        }
+        return numsDoubled;
       }
-      console.log(total);
 
-      const numsDoubled = [];
-
-      for (let i = 0; i < nums.length; i++) {
-        const num = nums[i];
-        numsDoubled.push(num * 2);
-      }
-      console.log(numsDoubled);
+      console.log(doubleArray([2, 4, 6, , 8, 0, 2]));
     </script>
   </body>
 </html>
